<resources>
    <string name="app_name">Warehouse Controller</string>
    <!-- Strings related to welcome page -->
    <string name="white_arrow">White Arrow</string>
    <string name="swipe_up">Swipe up</string>
    <!-- Strings related to login -->
    <string name="login_title">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to the main menu -->
    <string name="main_menu_title">Main Menu</string>
    <string name="box_contents_button">Box Contents</string>
    <string name="edit_box_button">Change Box Contents</string>
    <string name="box_contents_id_button">Box Contents By Id</string>
    <string name="edit_box_id_button">Change Box Contents By Id</string>

    <!-- Strings related to camera -->
    <string name="click_camera">Click to identify the QRCode</string>

    <!-- String related to qrcode data -->
    <string name="id_title">ID:</string>

</resources>
